--- a/from/js/containers/DataType/web.css
+++ b/from/js/containers/DataType/web.css
@@ -14,6 +14,11 @@
 	border-left: 1px solid #f3f3f3;
 	box-sizing: border-box;
 }
+.main100{
+	width: 100%;
+	border-left: 1px solid #f3f3f3;
+	box-sizing: border-box;
+}
 .main1{
 	height: 50px;padding:10px 0;width: 100%;
 }
@@ -21,7 +26,19 @@
 	float: left;
 }
 .floatR{
-	float: right;margin-right: 10px;
+	float: right;margin-right: 10px;width:80%;
+	box-sizing: border-box;
+	padding:0px 0px 5px;height:40px;
+	
+}
+.searchfrom{
+	width:100%;
+}
+.searchfrom .ant-form-item-label{
+	padding:0;
+}
+.searchfrom .ant-form-item{
+	margin-bottom: 0px;
 }
 .search{
 	position: relative;
